# ElementSyn

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
data/: SynConfig.txt  particles01.txt  particles_hexagonal.csv  particles_irregular.csv  particles_poisson.csv
data/branches/: CameraAndArcBall.txt  SynConfig.txt  branches_1.csv  branches_2.csv
data/branches/branches_1/: treeBranches0000.txt  treeBranches0001.txt  treeBranches0002.txt  treeBranches0003.txt  treeBranches0004.txt  treeBranches0005.txt  treeBranches0006.txt  treeBranches0007.txt  treeBranches0008.txt  treeBranches0009.txt  treeBranches0010.txt  treeBranches0011.txt  treeBranches0012.txt  treeBranches0013.txt  treeBranches0014.txt  treeBranches0015.txt  treeBranches0016.txt  treeBranches0017.txt  treeBranches0018.txt  treeBranches0019.txt  treeBranches0020.txt  treeBranches0021.txt  treeBranches0022.txt  treeBranches0023.txt  treeBranches0024.txt  treeBranches0025.txt  treeBranches0026.txt  treeBranches0027.txt  treeBranches0028.txt  treeBranches0029.txt  treeBranches0030.txt  treeBranches0031.txt  treeBranches0032.txt  treeBranches0033.txt  treeBranches0034.txt  treeBranches0035.txt  treeBranches0036.txt  treeBranches0037.txt  treeBranches0038.txt  treeBranches0039.txt  (+60 more)
data/branches/branches_2/: treeBranches0000.txt  treeBranches0001.txt  treeBranches0002.txt  treeBranches0003.txt  treeBranches0004.txt  treeBranches0005.txt  treeBranches0006.txt  treeBranches0007.txt  treeBranches0008.txt  treeBranches0009.txt  treeBranches0010.txt  treeBranches0011.txt  treeBranches0012.txt  treeBranches0013.txt  treeBranches0014.txt  treeBranches0015.txt  treeBranches0016.txt  treeBranches0017.txt  treeBranches0018.txt  treeBranches0019.txt  treeBranches0020.txt  treeBranches0021.txt  treeBranches0022.txt  treeBranches0023.txt  treeBranches0024.txt  treeBranches0025.txt  treeBranches0026.txt  treeBranches0027.txt  treeBranches0028.txt  treeBranches0029.txt  treeBranches0030.txt  treeBranches0031.txt  treeBranches0032.txt  treeBranches0033.txt  treeBranches0034.txt  treeBranches0035.txt  treeBranches0036.txt  treeBranches0037.txt  treeBranches0038.txt  treeBranches0039.txt  (+60 more)
data/particles/: SynConfig_irregular.txt  particles_grids.csv
freeglut/: CMakeLists.txt
lib/: CMakeLists.txt  freeglut.lib  freeglut_static.lib  freeglut_staticd.lib  freeglutd.lib  libcblas.lib  libf77blas.lib  libmetis.lib  libtaucs.lib  libtstatlas.lib  vcf2c.lib
lib/freeglut/: CMakeLists.txt
lib/quadprog/: CMakeLists.txt
lib/quadprog/src/: Array.cc  CMakeLists.txt  QuadProg++.cc
quadprog/: CMakeLists.txt
quadprog/src/: Array.hh  QuadProg++.cc  QuadProg++.hh  main.cc
src/: CMakeLists.txt  DynamicElement.sln
src/DynamicElement/: ArcBall.cpp  ArcBall.h  BoundaryConstraint.cpp  BoundaryConstraint.h  CMakeLists.txt  Camera.cpp  Camera.h  DelaunayTri.cpp  DelaunayTri.h  DynamicElement.vcxproj  DynamicElement.vcxproj.filters  Grid.h  GridND.h  HungarianAlgorithm.cpp  HungarianAlgorithm.h  MKLsolver.cpp  MKLsolver.h  MassSpringData.cpp  MassSpringData.h  MathFunc.cpp  MathFunc.h  MathTypes.cpp  MathTypes.h  NURBSinterpolate.cpp  NURBSinterpolate.h  PoissonDisk.h  RenderFunc.cpp  RenderFunc.h  SynConfigBase.cpp  SynConfigBase.h  TAUCSsolver.cpp  TAUCSsolver.h  main.h  taucs.h  taucs_addon.cpp  taucs_addon.h  taucs_matrix.h  util.h  vec.h
src/ParticleSystem/: CMakeLists.txt  ParticleData.cpp  ParticleData.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystem.vcxproj  ParticleSystem.vcxproj.filters  ParticleSystemConfig.cpp  ParticleSystemConfig.h  ParticleSystemMain.cpp  ParticleSystemSyn.cpp  ParticleSystemSyn.h
src/Spaghetti/: BulletSpaghetti.cpp  BulletSpaghetti.h  Spaghetti.vcxproj  Spaghetti.vcxproj.filters  SpaghettiMain.cpp  SpaghettiSyn.cpp  SpaghettiSyn.h  SpaghettiSynConfig.cpp  SpaghettiSynConfig.h
src/TreeBranches/: CMakeLists.txt  MassSpringData.cpp  MassSpringData.h  MassSpringSyn.cpp  MassSpringSyn.h  MassSpringSynConfig.cpp  MassSpringSynConfig.h  TreeBranches.vcxproj  TreeBranches.vcxproj.filters  TreeBranchesMain.cpp
