FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
    MESSAGE("OPENMP FOUND")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF()

find_package(GLUT REQUIRED)
find_package(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../lib/quadprog/src)

ADD_SUBDIRECTORY(DynamicElement)
ADD_SUBDIRECTORY(ParticleSystem)
ADD_SUBDIRECTORY(TreeBranches)
