CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(DynamicElement)

FILE(GLOB DET_SOURCES "*.cpp")
FILE(GLOB DET_HEADERS "*.h")

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../../lib)

ADD_LIBRARY(DynamicElement STATIC ${DET_SOURCES} ${DET_HEADERS})

TARGET_LINK_LIBRARIES(DynamicElement ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} quadprog)

IF(NOT WIN32)
    INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/libdet.a" DESTINATION ${CMAKE_SOURCE_DIR}/lib)
ENDIF(NOT WIN32)
