CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ParticleSystem)

FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
MESSAGE("OPENMP FOUND")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF()

FILE(GLOB PARTICLE_SYSTEM_SOURCES "*.cpp")

FILE(GLOB PARTICLE_SYSTEM_HEADERS "*.h")

INCLUDE_DIRECTORIES(../../lib/freeglut/include)
INCLUDE_DIRECTORIES(../../lib/quadprog/src)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../../lib)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../bin)

ADD_EXECUTABLE(ParticleSystem ${PARTICLE_SYSTEM_SOURCES} ${PARTICLE_SYSTEM_HEADERS})

TARGET_LINK_LIBRARIES(ParticleSystem freeglut quadprog DynamicElement)

IF(NOT WIN32)
  FIND_LIBRARY(OPENGL_glu_LIBRARY GLU PATHS /opt/X11/lib /usr/X11/lib /usr/X11R6/lib)
  TARGET_LINK_LIBRARIES(ParticleSystem ${OPENGL_glu_LIBRARY})
ENDIF()
