CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(ParticleSystem)

FILE(GLOB PARTICLE_SYSTEM_SOURCES "*.cpp")
FILE(GLOB PARTICLE_SYSTEM_HEADERS "*.h")

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../../lib)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../bin)

ADD_EXECUTABLE(ParticleSystem ${PARTICLE_SYSTEM_SOURCES} ${PARTICLE_SYSTEM_HEADERS})

TARGET_LINK_LIBRARIES(ParticleSystem ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} quadprog DynamicElement)

IF(NOT WIN32)
  FIND_LIBRARY(OPENGL_glu_LIBRARY GLU PATHS /opt/X11/lib /usr/X11/lib /usr/X11R6/lib)
  TARGET_LINK_LIBRARIES(ParticleSystem ${OPENGL_glu_LIBRARY})
ENDIF()
