CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(TreeBranches)

FILE(GLOB TREE_BRANCHES_SOURCES "*.cpp")
FILE(GLOB TREE_BRANCHES_HEADERS "*.h")

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../../lib)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../bin)

ADD_EXECUTABLE(TreeBranches ${TREE_BRANCHES_SOURCES} ${TREE_BRANCHES_HEADERS})

TARGET_LINK_LIBRARIES(TreeBranches ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} quadprog DynamicElement)

IF(NOT WIN32)
    FIND_LIBRARY(OPENGL_glu_LIBRARY GLU PATHS /opt/X11/lib /usr/X11/lib /usr/X11R6/lib)
    TARGET_LINK_LIBRARIES(TreeBranches ${OPENGL_glu_LIBRARY})
ENDIF()
